--- a/index.ipynb
+++ b/index.ipynb
@@ -127,22 +127,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "12"
+       "'Italy'"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "italy = len(countries) # 'Italy'\n",
+    "italy = countries[9] # 'Italy'\n",
     "italy"
    ]
   },
