--- a/index.ipynb
+++ b/index.ipynb
@@ -245,11 +245,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
-    "co.append('Malta')"
+    "countries.append('Malta')"
    ]
   },
   {
