--- a/index.ipynb
+++ b/index.ipynb
@@ -454,11 +454,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
-    "unique_countries = set(list())"
+    "unique_countries = set(list(countries))"
    ]
   },
   {
