--- a/index.ipynb
+++ b/index.ipynb
@@ -504,7 +504,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "num_of_repeats = len(unique_cournti)\n",
+    "num_of_repeats = len(unique_countries)\n",
     "num_of_repeats # 3"
    ]
   },
